--- a/notebooks/1_3_combining_transcriptome_and_genome.ipynb
+++ b/notebooks/1_3_combining_transcriptome_and_genome.ipynb
@@ -106,22 +106,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run kv build for transcriptome with update_df=True, and merge_headers=False\n",
+    "# run kv build for transcriptome with save_mutations_updated_csv=True, and merge_headers=False\n",
     "vk.build(\n",
     "    sequences=sequences_cdna,\n",
     "    mutations=mutations,\n",
     "    out=out_dir_kv_build_cdna,\n",
-    "    reference_out=reference_out_dir,\n",
-    "    w=w,\n",
-    "    remove_seqs_with_wt_kmers=True,\n",
-    "    optimize_flanking_regions=True,\n",
-    "    min_seq_len=k,\n",
-    "    max_ambiguous=max_ambiguous_kv,\n",
-    "    merge_identical=False,\n",
-    "    merge_identical_rc=False,\n",
-    "    cosmic_email = os.getenv('COSMIC_EMAIL'),\n",
-    "    cosmic_password = os.getenv('COSMIC_PASSWORD'),\n",
-    "    update_df=True\n",
+    "    reference_out_dir=reference_out_dir,\n",
+    "    save_mutations_updated_csv=True,\n",
+    "    ...\n",
     ")\n",
     "\n",
     "# load in the df_cdna, and set df_cdna['mcrs_source'] = 'cdna'\n",
@@ -135,24 +127,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run kv build with for genome update_df=True, and merge_headers=False\n",
+    "# run kv build with for genome save_mutations_updated_csv=True, and merge_headers=False\n",
     "vk.build(\n",
     "    sequences=sequences_genome,\n",
     "    mutations=cosmic_csv,  # generated above\n",
     "    out=out_dir_kv_build_genome,\n",
-    "    reference_out=reference_out_dir,\n",
-    "    w=w,\n",
-    "    remove_seqs_with_wt_kmers=True,\n",
-    "    optimize_flanking_regions=True,\n",
-    "    min_seq_len=k,\n",
-    "    max_ambiguous=max_ambiguous_kv,\n",
-    "    merge_identical=False,\n",
-    "    merge_identical_rc=False,\n",
+    "    reference_out_dir=reference_out_dir,\n",
     "    cosmic_email = os.getenv('COSMIC_EMAIL'),\n",
     "    cosmic_password = os.getenv('COSMIC_PASSWORD'),\n",
     "    seq_id_column = \"chromosome\",\n",
     "    mut_column = \"mutation_genome\",\n",
-    "    update_df=True\n",
+    "    save_mutations_updated_csv=True,\n",
+    "    ...\n",
     ")\n",
     "\n",
     "# load in the df_genome, and set df_genome['mcrs_source'] = 'genome'\n",
