--- a/notebooks/1_3_combining_transcriptome_and_genome.ipynb
+++ b/notebooks/1_3_combining_transcriptome_and_genome.ipynb
@@ -11,9 +11,7 @@
     "import gget\n",
     "import pandas as pd\n",
     "\n",
-    "import varseek as vk\n",
-    "# from varseek.utils import create_mutant_t2g\n",
-    "from varseek.utils import convert_mutation_cds_locations_to_cdna, read_fasta, find_matching_sequences_through_fasta, merge_genome_into_transcriptome_fasta, create_mutant_t2g, parse_sam_and_extract_sequences, combine_transcriptome_fasta, get_set_of_headers_from_sam, filter_fasta, fasta_to_fastq, find_genes_with_aligned_reads_for_kb_extract, parse_fastq, remove_fasta_headers, extract_problematic_mutation_list, drop_duplication_mutations, remove_mutations_which_are_a_perfect_substring_of_wt_reference_genome, remove_Ns_fasta, count_line_number_in_file, count_number_of_spliced_and_unspliced_headers, compute_unique_mutation_header_set, apply_enst_format, remove_dlist_duplicates, count_number_of_nonidentical_mutation_fragments, report_time, load_ipython_extension, plot_histogram_notebook_1, print_column_summary_stats"
+    "import varseek as vk"
    ]
   },
   {
@@ -27,10 +25,10 @@
     "threads = 16\n",
     "\n",
     "mutations = \"cosmic_cmc\"  # file path to mutations csv/tsv file OR one of the supported databases\n",
-    "sequences = \"cdna_and_genome\"  # file path to reference sequence fasta file OR, only if 'mutations' is in the supported databases, one of the following options is also supported: \"cds\", \"cdna\", \"genome\", \"cdna_and_genome\" - sequences for gget mutate\n",
+    "sequences = \"cdna_and_genome\"  # file path to reference sequence fasta file OR, only if 'mutations' is in the supported databases, one of the following options is also supported: \"cds\", \"cdna\", \"genome\", \"cdna_and_genome\" - sequences for vk build\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
     "remove_Ns = True\n",
-    "strandedness = False  # strandedness for gget mutate and the building of the kb index (True = strandedness matters i.e., treat f and rc as 2 different sequences; False = strandedness does not matter i.e., treat f and rc as the same \n",
+    "strandedness = False  # strandedness for vk build and the building of the kb index (True = strandedness matters i.e., treat f and rc as 2 different sequences; False = strandedness does not matter i.e., treat f and rc as the same \n",
     "fasta_filters = [\n",
     "    \"dlist_substring-equal=none\",  # filter out mutations which are a substring of the reference genome\n",
     "    \"pseudoaligned_to_human_reference_despite_not_truly_aligning-istrue\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
