--- a/notebooks/1_3_combining_transcriptome_and_genome.ipynb
+++ b/notebooks/1_3_combining_transcriptome_and_genome.ipynb
@@ -20,7 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir_base = \"/home/jrich/data/varseek_data\"\n",
+    "data_directory = os.path.dirname(os.path.abspath(\"\"))  # if this notebook resides in varseek/notebooks/0_data_download.ipynb, then this retrieves varseek\n",
+    "out_dir = os.path.join(data_directory, \"data\", \"vk_build_pipeline_notebook1\")\n",
+    "reference_out_dir = os.path.join(data_directory, \"data\", \"reference\")\n",
+    "\n",
     "w=54  # window size for varseek build (should be 1 less than kallisto k)\n",
     "threads = 16\n",
     "\n",
@@ -51,10 +54,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir_notebook = os.path.join(out_dir_base, \"notebook_1_newheaders\")\n",
-    "reference_out_dir = os.path.join(out_dir_base, \"reference\")\n",
+    "out_dir_notebook = os.path.join(out_dir, \"notebook_1_newheaders\")\n",
+    "reference_out_dir = os.path.join(out_dir, \"reference\")\n",
     "\n",
-    "os.makedirs(out_dir_base, exist_ok=True)\n",
+    "os.makedirs(out_dir, exist_ok=True)\n",
     "os.makedirs(out_dir_notebook, exist_ok=True)\n",
     "os.makedirs(reference_out_dir, exist_ok=True)\n",
     "\n",
