--- a/notebooks/1_3_combining_transcriptome_and_genome.ipynb
+++ b/notebooks/1_3_combining_transcriptome_and_genome.ipynb
@@ -137,7 +137,7 @@
     "    cosmic_email = os.getenv('COSMIC_EMAIL'),\n",
     "    cosmic_password = os.getenv('COSMIC_PASSWORD'),\n",
     "    seq_id_column = \"chromosome\",\n",
-    "    mut_column = \"mutation_genome\",\n",
+    "    var_column = \"mutation_genome\",\n",
     "    save_mutations_updated_csv=True,\n",
     "    ...\n",
     ")\n",
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run vk info with columns for mcrs_id, mcrs_sequence, mcrs_source, mcrs_header\n",
+    "# run vk info with columns for mcrs_id, vcrs_sequence, mcrs_source, mcrs_header\n",
     "# - and, if and only if I did not merge headers, - seqID, mutation, chromosome, and mutation_genome (for making header_cdna and header_genome within the function)"
    ]
   },
