checkpoint in the mutation --> variant transition - finished build, info, filter, ref

--- a/notebooks/1_3_combining_transcriptome_and_genome.ipynb
+++ b/notebooks/1_3_combining_transcriptome_and_genome.ipynb
@@ -33,11 +33,11 @@
     "remove_Ns = True\n",
     "strandedness = False  # strandedness for vk build and the building of the kb index (True = strandedness matters i.e., treat f and rc as 2 different sequences; False = strandedness does not matter i.e., treat f and rc as the same \n",
     "fasta_filters = [\n",
-    "    \"dlist_substring-equal=none\",  # filter out mutations which are a substring of the reference genome\n",
-    "    \"pseudoaligned_to_human_reference_despite_not_truly_aligning-istrue\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
-    "    \"dlist-equal=none\",  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
-    "    \"number_of_kmers_with_overlap_to_other_mcrs_items_in_mcrs_reference-max=999999\"  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"number_of_mcrs_items_with_overlapping_kmers_in_mcrs_reference-max=999999\"  # filter out mutations which overlap with other MCRSs in the reference\n",
+    "    \"substring_alignment_to_reference-equal=none\",  # filter out mutations which are a substring of the reference genome\n",
+    "    \"pseudoaligned_to_reference_despite_not_truly_aligning-istrue\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
+    "    \"alignment_to_reference-equal=none\",  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
+    "    \"number_of_kmers_with_overlap_to_other_VCRSs-max=999999\"  # filter out mutations which overlap with other MCRSs in the reference\n",
+    "    \"number_of_other_VCRSs_with_overlapping_kmers-max=999999\"  # filter out mutations which overlap with other MCRSs in the reference\n",
     "    \"longest_homopolymer_length=999999\",  # filters out MCRSs with repeating single nucleotide - eg 6\n",
     "    \"triplet_complexity-min=0\"  # filters out MCRSs with repeating triplets - eg 0.2\n",
     "]\n",
