--- a/notebooks/1_3_combining_transcriptome_and_genome.ipynb
+++ b/notebooks/1_3_combining_transcriptome_and_genome.ipynb
@@ -36,10 +36,10 @@
     "    \"substring_alignment_to_reference-equal=none\",  # filter out mutations which are a substring of the reference genome\n",
     "    \"pseudoaligned_to_reference_despite_not_truly_aligning-istrue\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
     "    \"alignment_to_reference-equal=none\",  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
-    "    \"number_of_kmers_with_overlap_to_other_VCRSs-max=999999\"  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"number_of_other_VCRSs_with_overlapping_kmers-max=999999\"  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"longest_homopolymer_length=999999\",  # filters out MCRSs with repeating single nucleotide - eg 6\n",
-    "    \"triplet_complexity-min=0\"  # filters out MCRSs with repeating triplets - eg 0.2\n",
+    "    \"number_of_kmers_with_overlap_to_other_VCRSs-max=999999\"  # filter out mutations which overlap with other VCRSs in the reference\n",
+    "    \"number_of_other_VCRSs_with_overlapping_kmers-max=999999\"  # filter out mutations which overlap with other VCRSs in the reference\n",
+    "    \"longest_homopolymer_length=999999\",  # filters out VCRSs with repeating single nucleotide - eg 6\n",
+    "    \"triplet_complexity-min=0\"  # filters out VCRSs with repeating triplets - eg 0.2\n",
     "]\n",
     "\n",
     "# os.environ['COSMIC_EMAIL'] = 'your_email'  # to avoid being prompted for email in varseek build\n",
@@ -84,15 +84,15 @@
     "sequences_cdna = \"cdna\"\n",
     "sequences_genome = \"genome\"\n",
     "out_dir_kv_build_cdna = os.path.join(out_dir_notebook, \"kv_cdna\")\n",
-    "kv_build_mcrs_fa_path_cdna = os.path.join(out_dir_kv_build_cdna, \"mcrs_cdna.fa\")\n",
+    "kv_build_vcrs_fa_path_cdna = os.path.join(out_dir_kv_build_cdna, \"vcrs_cdna.fa\")\n",
     "out_dir_kv_build_genome = os.path.join(out_dir_notebook, \"kv_genome\")\n",
-    "kv_build_mcrs_fa_path_genome = os.path.join(out_dir_kv_build_genome, \"mcrs_genome.fa\")\n",
+    "kv_build_vcrs_fa_path_genome = os.path.join(out_dir_kv_build_genome, \"vcrs_genome.fa\")\n",
     "\n",
     "os.makedirs(out_dir_kv_build_cdna, exist_ok=True)\n",
     "os.makedirs(out_dir_kv_build_genome, exist_ok=True) \n",
     "\n",
     "out_dir_kv_build = os.path.join(out_dir_notebook, f\"kv_{sequences}\")\n",
-    "kv_build_mcrs_fa_path = os.path.join(out_dir_kv_build, \"mcrs.fa\")\n",
+    "kv_build_vcrs_fa_path = os.path.join(out_dir_kv_build, \"vcrs.fa\")\n",
     "os.makedirs(out_dir_kv_build, exist_ok=True)\n",
     "\n",
     "cosmic_csv = os.path.join(reference_out_dir, \"cosmic\", f\"CancerMutationCensus_AllData_v{cosmic_version}_GRCh37_gget_mutate_with_cdna\")  # output of varseek\n",
@@ -117,9 +117,9 @@
     "    ...\n",
     ")\n",
     "\n",
-    "# load in the df_cdna, and set df_cdna['mcrs_source'] = 'cdna'\n",
+    "# load in the df_cdna, and set df_cdna['vcrs_source'] = 'cdna'\n",
     "df_cdna = pd.read_csv(os.path.join(out_dir_kv_build_cdna, \"mutation_metadata_updated.csv\"))\n",
-    "df_cdna['mcrs_source'] = 'cdna'"
+    "df_cdna['vcrs_source'] = 'cdna'"
    ]
   },
   {
@@ -142,9 +142,9 @@
     "    ...\n",
     ")\n",
     "\n",
-    "# load in the df_genome, and set df_genome['mcrs_source'] = 'genome'\n",
+    "# load in the df_genome, and set df_genome['vcrs_source'] = 'genome'\n",
     "df_genome = pd.read_csv(os.path.join(out_dir_kv_build_genome, \"mutation_metadata_updated.csv\"))\n",
-    "df_genome['mcrs_source'] = 'genome'"
+    "df_genome['vcrs_source'] = 'genome'"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # if desired, merge headers at this stage, come up with new mcrs_ids, and write a new fasta and a new id:header dict; and for rows with cdna and genome in the same header, make sure df_combined['mcrs_source'] = 'mixed'"
+    "# # if desired, merge headers at this stage, come up with new vcrs_ids, and write a new fasta and a new id:header dict; and for rows with cdna and genome in the same header, make sure df_combined['vcrs_source'] = 'mixed'"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run vk info with columns for mcrs_id, vcrs_sequence, mcrs_source, mcrs_header\n",
+    "# run vk info with columns for vcrs_id, vcrs_sequence, vcrs_source, vcrs_header\n",
     "# - and, if and only if I did not merge headers, - seqID, mutation, chromosome, and mutation_genome (for making header_cdna and header_genome within the function)"
    ]
   },
