--- a/notebooks/1_3_combining_transcriptome_and_genome.ipynb
+++ b/notebooks/1_3_combining_transcriptome_and_genome.ipynb
@@ -27,17 +27,17 @@
     "w=54  # window size for varseek build (should be 1 less than kallisto k)\n",
     "threads = 16\n",
     "\n",
-    "mutations = \"cosmic_cmc\"  # file path to mutations csv/tsv file OR one of the supported databases\n",
-    "sequences = \"cdna_and_genome\"  # file path to reference sequence fasta file OR, only if 'mutations' is in the supported databases, one of the following options is also supported: \"cds\", \"cdna\", \"genome\", \"cdna_and_genome\" - sequences for vk build\n",
+    "variants = \"cosmic_cmc\"  # file path to variants csv/tsv file OR one of the supported databases\n",
+    "sequences = \"cdna_and_genome\"  # file path to reference sequence fasta file OR, only if 'variants' is in the supported databases, one of the following options is also supported: \"cds\", \"cdna\", \"genome\", \"cdna_and_genome\" - sequences for vk build\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
     "remove_Ns = True\n",
     "strandedness = False  # strandedness for vk build and the building of the kb index (True = strandedness matters i.e., treat f and rc as 2 different sequences; False = strandedness does not matter i.e., treat f and rc as the same \n",
     "fasta_filters = [\n",
-    "    \"substring_alignment_to_reference-equal=none\",  # filter out mutations which are a substring of the reference genome\n",
-    "    \"pseudoaligned_to_reference_despite_not_truly_aligning-istrue\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
-    "    \"alignment_to_reference-equal=none\",  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
-    "    \"number_of_kmers_with_overlap_to_other_VCRSs-max=999999\"  # filter out mutations which overlap with other VCRSs in the reference\n",
-    "    \"number_of_other_VCRSs_with_overlapping_kmers-max=999999\"  # filter out mutations which overlap with other VCRSs in the reference\n",
+    "    \"substring_alignment_to_reference-equal=none\",  # filter out variants which are a substring of the reference genome\n",
+    "    \"pseudoaligned_to_reference_despite_not_truly_aligning-istrue\",  # filter out variants which pseudoaligned to human genome despite not truly aligning\n",
+    "    \"alignment_to_reference-equal=none\",  # filter out variants which are capable of being d-listed (given that I filter out the substrings above)\n",
+    "    \"number_of_kmers_with_overlap_to_other_VCRSs-max=999999\"  # filter out variants which overlap with other VCRSs in the reference\n",
+    "    \"number_of_other_VCRSs_with_overlapping_kmers-max=999999\"  # filter out variants which overlap with other VCRSs in the reference\n",
     "    \"longest_homopolymer_length=999999\",  # filters out VCRSs with repeating single nucleotide - eg 6\n",
     "    \"triplet_complexity-min=0\"  # filters out VCRSs with repeating triplets - eg 0.2\n",
     "]\n",
@@ -110,7 +110,7 @@
     "# run kv build for transcriptome with save_variants_updated_csv=True, and merge_headers=False\n",
     "vk.build(\n",
     "    sequences=sequences_cdna,\n",
-    "    mutations=mutations,\n",
+    "    variants=variants,\n",
     "    out=out_dir_kv_build_cdna,\n",
     "    reference_out_dir=reference_out_dir,\n",
     "    save_variants_updated_csv=True,\n",
@@ -131,7 +131,7 @@
     "# run kv build with for genome save_variants_updated_csv=True, and merge_headers=False\n",
     "vk.build(\n",
     "    sequences=sequences_genome,\n",
-    "    mutations=cosmic_csv,  # generated above\n",
+    "    variants=cosmic_csv,  # generated above\n",
     "    out=out_dir_kv_build_genome,\n",
     "    reference_out_dir=reference_out_dir,\n",
     "    cosmic_email = os.getenv('COSMIC_EMAIL'),\n",
