changing info hard coding

--- a/notebooks/1_3_combining_transcriptome_and_genome.ipynb
+++ b/notebooks/1_3_combining_transcriptome_and_genome.ipynb
@@ -115,9 +115,9 @@
     "    ...\n",
     ")\n",
     "\n",
-    "# load in the df_cdna, and set df_cdna['vcrs_source'] = 'cdna'\n",
+    "# load in the df_cdna, and set df_cdna['variant_source'] = 'cdna'\n",
     "df_cdna = pd.read_csv(os.path.join(out_dir_kv_build_cdna, \"mutation_metadata_updated.csv\"))\n",
-    "df_cdna['vcrs_source'] = 'cdna'"
+    "df_cdna['variant_source'] = 'cdna'"
    ]
   },
   {
@@ -140,9 +140,9 @@
     "    ...\n",
     ")\n",
     "\n",
-    "# load in the df_genome, and set df_genome['vcrs_source'] = 'genome'\n",
+    "# load in the df_genome, and set df_genome['variant_source'] = 'genome'\n",
     "df_genome = pd.read_csv(os.path.join(out_dir_kv_build_genome, \"mutation_metadata_updated.csv\"))\n",
-    "df_genome['vcrs_source'] = 'genome'"
+    "df_genome['variant_source'] = 'genome'"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # if desired, merge headers at this stage, come up with new vcrs_ids, and write a new fasta and a new id:header dict; and for rows with cdna and genome in the same header, make sure df_combined['vcrs_source'] = 'mixed'"
+    "# # if desired, merge headers at this stage, come up with new vcrs_ids, and write a new fasta and a new id:header dict; and for rows with cdna and genome in the same header, make sure df_combined['variant_source'] = 'mixed'"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run vk info with columns for vcrs_id, vcrs_sequence, vcrs_source, vcrs_header\n",
+    "# run vk info with columns for vcrs_id, vcrs_sequence, variant_source, vcrs_header\n",
     "# - and, if and only if I did not merge headers, - seqID, mutation, chromosome, and mutation_genome (for making header_cdna and header_genome within the function)"
    ]
   },
